objects/WR_Line_Item__c.object
<CustomObject>
    <description>Junction Object with Warranty_Registration and WR_FDS_Product .</description>
    <fields>
        <fullName>AssetID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset Name</label>
        <referenceTo>Asset</referenceTo>
        <relationshipName>WR_Line_Items1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Maturity__c</fullName>
        <formula>TEXT( 
IF(UPPER( WR_FDS_Product__r.Product_Type__c) = &apos;INVERTER&apos;,
   10 -  (Year(TODAY()) -  Year(Warranty_Registration__r.Delivery_Date__c)) , 
   IF(UPPER( WR_FDS_Product__r.Product_Type__c) = &apos;MODULE&apos;,
   25  -  (Year(TODAY()) - Year(Warranty_Registration__r.Delivery_Date__c)),
   0)
)
) +&apos; Years left&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Maturity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maturity_in_days__c</fullName>
        <formula>TEXT(
IF(UPPER( WR_FDS_Product__r.Product_Type__c) = &apos;INVERTER&apos;,
10 * 365 - (TODAY() - Warranty_Registration__r.Delivery_Date__c) ,
IF(UPPER( WR_FDS_Product__r.Product_Type__c) = &apos;MODULE&apos;,
25 * 365 - (TODAY() - Warranty_Registration__r.Delivery_Date__c),
0)
)
) +&apos; Days left&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Maturity in days</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <formula>WR_FDS_Product__r.Product_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <formula>WR_FDS_Product__r.Product_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Serial_Number__c</fullName>
        <formula>WR_FDS_Product__r.Serial_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Serial Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WR_FDS_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WR_FDS_Product</label>
        <referenceTo>WR_FDS_Product__c</referenceTo>
        <relationshipName>WR_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Warranty_Registration__c</fullName>
        <label>Warranty_Registration</label>
        <referenceTo>Warranty_Registration__c</referenceTo>
        <relationshipName>WR_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>WR Line Item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Product_Name__c</columns>
        <columns>Product_Type__c</columns>
        <columns>Serial_Number__c</columns>
        <columns>Warranty_Registration__c</columns>
        <columns>WR_FDS_Product__c</columns>
        <columns>AssetID__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>WR Line Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WR Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>